<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/eval"
        android:icon="@drawable/ic_arrow_forward_white_24dp"
        android:title="@string/eval"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sendEmail"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/sendEmail"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/clear"
        android:icon="@drawable/ic_clear_white_24dp"
        android:title="@string/clear"
        app:showAsAction="ifRoom" />
</menu>
