<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TextureView
            android:id="@+id/surfaceView"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/crosshairs"
            android:src="@drawable/ic_fullscreen_white_24dp"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/frameRectangle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/frameRGB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/frameRGB"
            android:layout_weight="1"
            android:gravity="center"/>
        <Button
            android:id="@+id/photoButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/photoButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"/>
        <View
            android:id="@+id/savedRectangle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/savedRGB"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/savedRGB"
            android:layout_weight="2"
            android:gravity="center"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>